[project]
name = "exotel-chatbot-dial-in"
version = "0.1.0"
description = "Exotel dial-in example for Pipecat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pipecat-ai[websocket,cartesia,openai,silero,deepgram,runner,ultravox]>=0.0.85",
  "pipecatcloud>=0.2.4",
  "huggingface_hub>=0.20.0",
  "transformers>=4.30.0",
  "torch>=2.0.0",
  "numpy>=1.21.0",
  "pyngrok>=7.0.0",
  "uvicorn>=0.24.0",
  "fastapi>=0.104.0"
]
